--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
         android:theme="@style/Theme.SmartCheck"
         tools:targetApi="31">
         <activity
-            android:name=".NearbyHospitals"
+            android:name=".TermsandCondt"
+            android:exported="false" />
+        <activity
+            android:name=".nearby_hospitals"
             android:exported="false" />
         <activity
             android:name=".ComplainStatus"
